--- a/index.html
+++ b/index.html
@@ -10,12 +10,26 @@
     
     <div class="b">
         <div id="b1"><img src="bulb1234.jpg"></div>
-        <div id="b2"><img src="bulb4321.jpg"></div></center>
+        <div id="b2" style="display: none;"><img src="bulb4321.jpg"></div>
     </div>
-<center>
-    <button id="d1" onclick="myfun1()"><b>ON</b></button>&nbsp;&nbsp;&nbsp;
-    <button id="d2" onclick="myfun2()"><b>OFF</b></button>
-</center>
+        <label class="switch">
+            <input type="checkbox" id="toggleSwitch" onclick="toggleBulbs()">
+            <span class="slider"></span>
+            <svg xmlns="http://www.w3.org/2000/svg" class="icon sun" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <circle cx="12" cy="12" r="4"/>
+                <path d="M12 2v2"/>
+                <path d="M12 20v2"/>
+                <path d="m4.93 4.93 1.41 1.41"/>
+                <path d="m17.66 17.66 1.41 1.41"/>
+                <path d="M2 12h2"/>
+                <path d="M20 12h2"/>
+                <path d="m6.34 17.66-1.41 1.41"/>
+                <path d="m19.07 4.93-1.41 1.41"/>
+            </svg>
+            <svg xmlns="http://www.w3.org/2000/svg" class="icon moon" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M12 3a6 6 0 0 0 9 9 9 9 0 1 1-9-9Z"/>
+            </svg>
+        </label>
     <script src="script.js"></script>
 </body>
 </html>
